Fix regex for transformation service

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ acs-61-repo-aws-packer/manifest.json
 acs-61-search-aws-packer/manifest.json
 acs-61-repo-aws-packer/manifest.json
 acs-61-repo-aws-packer/acs-61-files/downloaded/digital-workspace.war
+acs-61-transformation-services-aws-packer/manifest.json
